# hibrid

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: basic_usage.rs
install-uninstall/: install.bat  install.sh  linux_macos-install.sh  linux_macos-uninstall.sh  windows-install.bat  windows-uninstall.bat
src/: action.rs  backend.rs  main.rs  runner.rs  search.rs  ui.rs
tests/: integration_tests.rs
